fix awkward spacings in enemy box

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,8 +7,10 @@ p {
 }
 
 img {
-    height:100%;
     width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: 50% 50%;
 }
 
 body {
@@ -98,14 +100,15 @@ button {
 #character-box {
     background-color: goldenrod;
     padding:10px 0px;
-    margin:10px auto;
+    margin: 20px;
     text-align:center;
+    height: 500px;
 }
 
 #enemy-box {
     background-color: rgb(23, 219, 233);
     padding:0px 0px;
-    margin:10px auto;
+    margin: 20px;
     text-align:center;
 }
 
